# Llamora

./: .env  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  biome.json  config.py  db.py  dprint.json  llm_backend.py  llm_engine.py  main.py  package.json  pnpm-lock.yaml  prompt_template.py  pyproject.toml  util.py
.githooks/: pre-commit
app/: __init__.py
app/api/: search.py
app/db/: __init__.py  base.py  events.py  messages.py  search_history.py  tags.py  users.py  utils.py  vectors.py
app/embed/: model.py
app/index/: message_ann.py  session_ann.py
app/routes/: auth.py  chat.py  days.py  search.py  sessions.py  tags.py
app/services/: auth_helpers.py  calendar.py  chat_context.py  chat_helpers.py  chat_meta.py  chat_stream.py  container.py  crypto.py  index_worker.py  lexical_reranker.py  llm_service.py  session_store.py  time.py  timezone.py  validators.py  vector_search.py
app/services/chat_stream/: __init__.py  manager.py  pipeline.py
app/static/css/: auth.css  calendar.css  chat.css  main.css  meta-chips.css  profile.css  search.css  sidebar.css  tags.css
app/static/js/: app-init.js  auth.js  calendar.js  chat-entry.js  chat.js  day.js  forms.js  main.js  markdown.js  meta-chips.js  popover.js  recovery.js  scroll.js  session.js  sidebar.js  timezone.js  tooltip.js  ui.js
app/templates/: error.html  index.html  login.html  profile.html  recovery.html  register.html  reset_password.html  tag_overview.html
app/templates/partials/: assistant_stream.html  bot_stream.html  calendar.html  calendar_popover.html  chat.html  error.html  history.html  meta_chips.html  overlay_close_button.html  password_field.html  password_strength.html  placeholder.html  profile.html  search_form.html  search_result_item.html  search_results.html  sidebar.html  sidebar_session.html  sidebar_session_edit.html  tag_chip.html  tag_overview.html  tag_suggestions.html
app/util/: tags.py
config/: .secrets.toml  demo_data.example.toml  settings.local.toml  settings.toml
frontend/static/css/: animations.css  app.css  auth.css  calendar.css  chat.css  confirm-modal.css  entries.css  entry-actions-shared.css  entry-tags.css  grid.css  header.css  main.css  markdown.css  meta-chips.css  motion.css  profile.css  search.css  tags-view.css
frontend/static/icons/: README.md
frontend/static/js/: app-entry.js  app-init.js  chat-entry.js  day.js  entries-entry.js  forms.js  global-shortcuts.js  lifecycle.js  lockbox.js  logo-toggle.js  markdown.js  password-strength.js  popover.js  profile-page.js  recovery.js  scroll-intent.js  scroll-manager.js  timezone.js  tooltip.js  typing-indicator.js  ui.js
llm/: client.py  llm_backend.py  llm_engine.py  meta_grammar.bnf  process_manager.py  prompt_template.py  token_counter.py
llm/prompts/: llamora_chatml.j2  llamora_hermes.j2  llamora_phi.j2  opening_chatml.j2
migrations/: 0001-init.sql  0001_init.sql  0002-vector-chunks.sql  0003-vectors-dtype.sql  0004-lockbox.sql  0005-updated-at.sql  0006-entry-digest.sql  0007-entry-flags.sql  0008-fix-updated-at-triggers.sql  0009-recompute-digests.sql  0010-composite-reply-to-index.sql  0011-entry-digest-version-and-not-null.sql  0012-key-epochs.sql  0013-tags-seen-index.sql  0014-search-history-user-fk.sql  0015-dek-sessions.sql
scripts/: backfill_entry_digests.py  backfill_entry_flags.py  backfill_prompt_tokens.py  build_assets.py  demo_data_utils.py  extract_demo_db.py  format_frontend.sh  generate_demo_data.py  get_user_dek.py  lint_backend.sh  lint_frontend_js.sh  migrate.py  migrate_entry_text.py  migrate_tags_kebab.py  normalize_tags.py  vendor.mjs
scripts/migrations/: 20260202_entries.sql
sql/: schema.sql
src/llamora/: __init__.py  __main__.py  config.py  settings.py  util.py
src/llamora/app/: __init__.py
src/llamora/llm/: budget.py  (+9 more)
static/css/: main.css
static/js/: main.js
templates/: index.html
templates/partials/: messages.html  placeholder.html
tests/services/: test_history_serializer.py
typings/: hnswlib.pyi
typings/aiosqlitepool/: __init__.pyi  client.pyi  connection.pyi  exceptions.pyi  pool.pyi  protocols.pyi
typings/orjson/: __init__.pyi  orjson.pyi
typings/zxcvbn/: __init__.pyi  adjacency_graphs.pyi  feedback.pyi  frequency_lists.pyi  matching.pyi  scoring.pyi  time_estimates.pyi
(+419 files in other folders)
