[project]
name = "Llamora"
version = "0.1.0"
description = "A chatbot webapp based on Python, HTMX, and a llama.cpp/llamafile server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynacl>=1.5.0",
    "aiosqlite>=0.20.0",
    "python-ulid>=3.0.0",
    "quart>=0.20.0",
    "hypercorn>=0.17.3",
    "quart-wtforms>=1.0.3",
    "httpx>=0.27.0",
    "zxcvbn>=4.4.2",
    "aiosqlitepool>=1.0.0",
    "numpy>=1.26.4",
    "hnswlib>=0.8.0",
    "pyahocorasick>=2.1.0",
    "fastembed>=0.7.1",
    "humanize>=4.9.0",
    "cachetools>=5.3.3",
    "orjson>=3.10.0",
    "dynaconf>=3.2.6",
    "blinker>=1.9.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "bleach>=6.1.0",
    "jinja2>=3.1.4",
    "emoji>=2.12.1",
    "openai>=1.0.0",
    "tiktoken>=0.12.0",
    "fastmigrate>=0.4.2",
    "beautifulsoup4>=4.12.3",
    "typer>=0.12.5",
    "rich>=14.3.2",
]

[project.scripts]
# Use the unified CLI that supports subcommands (dev/prod).
llamora-server = "llamora.__main__:main"
# Keep a convenience alias for direct dev mode if desired.
llamora-server-dev = "llamora.__main__:dev"

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "mypy>=1.18.2",
    "pyright>=1.1.407",
    "pytest>=8.3.2",
    "ruff>=0.9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/llamora"]
include = [
    "frontend/static",
    "frontend/static/**/*",
    "frontend/dist",
    "frontend/dist/**/*",
    "src/llamora/llm/templates",
    "src/llamora/llm/templates/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llamora"]
include = [
    "frontend/static",
    "frontend/static/**/*",
    "frontend/dist",
    "frontend/dist/**/*",
    "src/llamora/llm/templates",
    "src/llamora/llm/templates/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/llamora",
    "frontend/static",
    "frontend/dist",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
ignore = ["frontend", "doc/screenshots"]
useLibraryCodeForTypes = true
